<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conts_color"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="0dp"
    tools:context=".SignUp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Already have Account?  "
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="login"
                android:textSize="12sp"
                app:backgroundTint="@color/teal_700"
                app:cornerRadius="20dp" />


        </LinearLayout>




            <EditText
                android:layout_marginTop="50dp"
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/btn_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/confPass"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_round"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageBottom"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/botton_bg"
                android:backgroundTint="@color/teal_200"
                android:src="@drawable/ic_baseline_home_24"
                android:layout_marginTop="104dp"
                />

</LinearLayout>