<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conts_color"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="0dp"
    tools:context=".EmployeeLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Employee Login"
            android:textAlignment="center"
            android:textSize="25sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/btn_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        tools:error="enabled"
        />



    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:fontFamily="sans-serif-light"
        android:ems="10"
        android:hint="@string/enter_password"
        android:background="@drawable/btn_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="10dp"
        >
        <Spinner
            android:id="@+id/menuSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round"
        android:text="login"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="#1D9AF5"
        android:textAlignment="textEnd"
        android:text="@string/forgot_password" />

    <ImageView
        android:id="@+id/imageBottom"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/botton_bg"
        android:backgroundTint="@color/teal_200"
        android:src="@drawable/ic_baseline_home_24"
        android:layout_marginTop="65dp"
        />


</LinearLayout>